--- a/house.gov.by/20e69e40d1db804e6053e5d915542e98be8ae879.yml
+++ b/house.gov.by/20e69e40d1db804e6053e5d915542e98be8ae879.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 17:42:25 GMT
+    - Fri, 20 Oct 2017 19:47:09 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=34chk44c11p7ds2jr514uqhe70; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 17:42:25 GMT
+recorded_at: Fri, 20 Oct 2017 19:47:09 GMT
