--- a/house.gov.by/bba2b399edfbdd7001d27d69129864633c2b0114.yml
+++ b/house.gov.by/bba2b399edfbdd7001d27d69129864633c2b0114.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 18:16:11 GMT
+    - Fri, 20 Oct 2017 19:48:20 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=t7vgte5phpuh0maamjscvujdq6; path=/
+    - PHPSESSID=l9qvjbh5mtbs2ha32ksqma5fq6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 18:16:12 GMT
+recorded_at: Fri, 20 Oct 2017 19:48:21 GMT
