--- a/house.gov.by/9eb274f9499e59ea06363c7ab477a87120d8e451.yml
+++ b/house.gov.by/9eb274f9499e59ea06363c7ab477a87120d8e451.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 17:55:49 GMT
+    - Fri, 20 Oct 2017 19:54:23 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=pj5vjskhbdhrmpec4qeb3dk3o5; path=/
+    - PHPSESSID=4u5u12f4gsca92ra387390f7d3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 17:55:50 GMT
+recorded_at: Fri, 20 Oct 2017 19:54:24 GMT
