--- a/house.gov.by/778d300db4f1c8e9b4c35629d5885371d02152a7.yml
+++ b/house.gov.by/778d300db4f1c8e9b4c35629d5885371d02152a7.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 16:58:45 GMT
+    - Fri, 20 Oct 2017 19:55:48 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=ernq44jahnurafo5mrvvjl8m71; path=/
+    - PHPSESSID=1suq9f8bfu3rlaqg0pee8sv2a6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 16:58:46 GMT
+recorded_at: Fri, 20 Oct 2017 19:55:49 GMT
