--- a/house.gov.by/46dfedc0d01f097096bf05cbbb3067cf518ec95c.yml
+++ b/house.gov.by/46dfedc0d01f097096bf05cbbb3067cf518ec95c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 16:57:20 GMT
+    - Fri, 20 Oct 2017 20:12:26 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=r940j1crra005uagqdhndrg9n1; path=/
+    - PHPSESSID=omo5gbqd31997fljvkadldh385; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 16:57:21 GMT
+recorded_at: Fri, 20 Oct 2017 20:12:26 GMT
