--- a/house.gov.by/24bc65cba9257ede0d18534acfb8be7cd6e47929.yml
+++ b/house.gov.by/24bc65cba9257ede0d18534acfb8be7cd6e47929.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 19:46:43 GMT
+    - Fri, 20 Oct 2017 20:26:15 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=1q1u1kjtn9tj7ho05ppc3b9so7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 19:46:44 GMT
+recorded_at: Fri, 20 Oct 2017 20:26:15 GMT
