--- a/house.gov.by/600ce5976f7e793ea39fbe05930f91ad74511f7c.yml
+++ b/house.gov.by/600ce5976f7e793ea39fbe05930f91ad74511f7c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 19:08:41 GMT
+    - Fri, 20 Oct 2017 20:27:31 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=hbtnghe7dua4k4qtfj436chqt0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - UPDATING
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 19:08:41 GMT
+recorded_at: Fri, 20 Oct 2017 20:27:31 GMT
