--- a/house.gov.by/61d2fb337605ce0e5df6b86e1c8c104dbc74308a.yml
+++ b/house.gov.by/61d2fb337605ce0e5df6b86e1c8c104dbc74308a.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 18:34:16 GMT
+    - Fri, 20 Oct 2017 20:29:51 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=hgqibhp8rpdhphv8pu7p9dojh1; path=/
+    - PHPSESSID=ag7uvugphdqtk6mpa0nsv3f4f5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 18:34:17 GMT
+recorded_at: Fri, 20 Oct 2017 20:29:52 GMT
