--- a/house.gov.by/5c6c1df8deff67757e87013192ccd6b1f02ac39e.yml
+++ b/house.gov.by/5c6c1df8deff67757e87013192ccd6b1f02ac39e.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 18:48:56 GMT
+    - Fri, 20 Oct 2017 20:34:48 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=ej15p1bn3d0c6tb2tbhobu9fj0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 18:48:56 GMT
+recorded_at: Fri, 20 Oct 2017 20:34:49 GMT
