--- a/house.gov.by/c98033743ca2fc6879dd09787c8e3d04e2502ccc.yml
+++ b/house.gov.by/c98033743ca2fc6879dd09787c8e3d04e2502ccc.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 19:57:50 GMT
+    - Fri, 20 Oct 2017 21:02:08 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=eb37jd92k51mtifetb14sl5jt0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 19:57:51 GMT
+recorded_at: Fri, 20 Oct 2017 21:02:08 GMT
