--- a/house.gov.by/97a79bb3d86184e516b5559a415c581e7f5221ce.yml
+++ b/house.gov.by/97a79bb3d86184e516b5559a415c581e7f5221ce.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 19:07:14 GMT
+    - Fri, 20 Oct 2017 21:03:50 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=0k0h1egnjhcrlthcodprfik931; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 19:07:14 GMT
+recorded_at: Fri, 20 Oct 2017 21:03:52 GMT
