--- a/house.gov.by/c232bbe7392341325100831a4df8793e387d4081.yml
+++ b/house.gov.by/c232bbe7392341325100831a4df8793e387d4081.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 18:56:40 GMT
+    - Fri, 20 Oct 2017 21:04:18 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=d8mplsaqvamhos4p7ktcmlsaa5; path=/
+    - PHPSESSID=ogenj53eqt883h400r3hjffk37; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 18:56:41 GMT
+recorded_at: Fri, 20 Oct 2017 21:04:19 GMT
