--- a/house.gov.by/dec2293fc956e79a4bc91eccd8fe48d84e328beb.yml
+++ b/house.gov.by/dec2293fc956e79a4bc91eccd8fe48d84e328beb.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 19:23:55 GMT
+    - Fri, 20 Oct 2017 21:20:33 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=r7d3vabt1mfp80c8vo2cilkqs4; path=/
+    - PHPSESSID=vs0a3rshit84606ojs9o7aucs6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 19:23:55 GMT
+recorded_at: Fri, 20 Oct 2017 21:20:33 GMT
