--- a/house.gov.by/eba9dcf24b9e436be091da41152b7bee4250a607.yml
+++ b/house.gov.by/eba9dcf24b9e436be091da41152b7bee4250a607.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 18:35:09 GMT
+    - Fri, 20 Oct 2017 21:23:23 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=8rkurq7lqa446266ep1rp5b351; path=/
+    - PHPSESSID=d76umur9ihhhh3t7gei21um6a0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 18:35:10 GMT
+recorded_at: Fri, 20 Oct 2017 21:23:24 GMT
