--- a/house.gov.by/03666e2052194ccd0d620d67ad9c3b5b50e78b2a.yml
+++ b/house.gov.by/03666e2052194ccd0d620d67ad9c3b5b50e78b2a.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 19:28:04 GMT
+    - Fri, 20 Oct 2017 21:30:59 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=qnupjg4q8l7hlde3clnn80hdg2; path=/
+    - PHPSESSID=3p704jb1s1o7s61qqv5md3gaj4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 19:28:06 GMT
+recorded_at: Fri, 20 Oct 2017 21:31:00 GMT
