--- a/house.gov.by/19e6e7e38c36b9903d45df4a99cf37b90e06a361.yml
+++ b/house.gov.by/19e6e7e38c36b9903d45df4a99cf37b90e06a361.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 18:33:16 GMT
+    - Fri, 20 Oct 2017 21:33:56 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=k05mh221vlnetddj3mft470lq6; path=/
+    - PHPSESSID=r5ndjmlna75jfjgujjtedo4kc7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 18:33:17 GMT
+recorded_at: Fri, 20 Oct 2017 21:33:57 GMT
