--- a/house.gov.by/5cdfb777497bb1c107082ec4e25026842416f62c.yml
+++ b/house.gov.by/5cdfb777497bb1c107082ec4e25026842416f62c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 18:50:11 GMT
+    - Fri, 20 Oct 2017 21:38:42 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=i4co2ipac753ghbmkcr2u5in56; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 18:50:11 GMT
+recorded_at: Fri, 20 Oct 2017 21:38:42 GMT
