--- a/house.gov.by/9a85211e61a86ce548cc5cf1a7cbfff538a6e9ea.yml
+++ b/house.gov.by/9a85211e61a86ce548cc5cf1a7cbfff538a6e9ea.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 18:53:59 GMT
+    - Fri, 20 Oct 2017 21:52:06 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=nhittvesarq51hrceujqdscre4; path=/
+    - PHPSESSID=9318fmpu7ildlh1f6574er5ec2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 18:54:00 GMT
+recorded_at: Fri, 20 Oct 2017 21:52:07 GMT
