--- a/house.gov.by/3c84851aacd98293a2e688314ec0dc4e23fb97e1.yml
+++ b/house.gov.by/3c84851aacd98293a2e688314ec0dc4e23fb97e1.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 20:19:02 GMT
+    - Sat, 21 Oct 2017 19:24:09 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=2i692tq8jth0vfr647uvi36ae3; path=/
+    - PHPSESSID=rrflrkdsg37q7vn5l84eto2qb7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 20:19:04 GMT
+recorded_at: Sat, 21 Oct 2017 19:24:10 GMT
