--- a/house.gov.by/67264dbb9e3cb974cdf5fbac85e5c34f3abbbc7b.yml
+++ b/house.gov.by/67264dbb9e3cb974cdf5fbac85e5c34f3abbbc7b.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 20 Oct 2017 20:45:01 GMT
+    - Sat, 21 Oct 2017 19:50:38 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=gd46tp4uue48ouvuvak752aa74; path=/
+    - PHPSESSID=3gmvrsq5j6papc3fd7d3nm1fo4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 20 Oct 2017 20:45:01 GMT
+recorded_at: Sat, 21 Oct 2017 19:50:39 GMT
